[package]
name = "acme"
version = "0.1.0"
edition = "2021"

[features]
web = ["getrandom/js"]
x509 = ["openssl"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.13"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "1.0", features = ["std"] }
getrandom = "0.2"
http-client = { version = "6.5", default_features = false }
openssl = { version = "0.10", optional = true }
p256 = { version = "0.10", features = ["jwk"] }
rand = { version = "0.8", default_features = false, features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
signature = "1.3"
thiserror = "1.0"
zeroize = "1.4"

[dev-dependencies]
once_cell = "1.9"